--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,1 +1,9 @@
-<div>{{table}}</div>
+<table>
+    {% for row in table %}
+        <tr>
+            {% for cell in row %}
+                <td>{{cell}}</td>
+            {% endfor %}
+        </tr>
+    {% endfor %}
+</table>
