--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -18,20 +18,9 @@
     <main>
         <h1>Hubstaff activity report</h1>
 
-        {% if table|length > 0 %}
-            <h3>Activity report for {{date}}:</h3>
-            <table>
-                {% for row in table %}
-                <tr>
-                    {% for cell in row %}
-                    <td>{{cell}}</td>
-                    {% endfor %}
-                </tr>
-                {% endfor %}
-            </table>
-        {% else %}
-            <span class="error">No activity on {{date}} :(</span>
-        {% endif %}
+        {% block content %}
+
+        {% endblock %}
     </main>
 </body>
 </html>
